# ros_communicaiton_with-touch_screen

./: README.md
pilot_bridge/: CMakeLists.txt  package.xml
pilot_bridge/config/: task.yaml
pilot_bridge/include/pilot_bridge/: pilot_bridge.h
pilot_bridge/launch/: pilot_bridge.launch
pilot_bridge/lib/: libyaml-cpp.so.0.7.0
pilot_bridge/msg/: wheel_speed.msg
pilot_bridge/src/: last_task.yaml  pilot_bridge.cpp  pilot_bridge_node.cpp
screen_demo/: CMakeLists.txt  package.xml
screen_demo/include/scree_demo/: ts_ROS_node.h  ts_ros_commu.h
screen_demo/src/: ROS_node_serial_port_touchscreen.cpp  serial_port_demo.cpp  serial_port_demo_write_read.cpp  ts_ros_commu.cpp  ts_ros_commu_node.cpp
user_interface/: CMakeLists.txt  package.xml
user_interface/include/user_interface/: user_interface.h
user_interface/launch/: user_interface.launch
user_interface/msg/: sensor_status.msg
user_interface/src/: user_interface.cpp  user_interface_node.cpp
